--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="curric">
-            <h1 ><a class="curriculo" href="/files/CV_GuilhermeElias_2021.pdf">clique aqui para abrir o currículo</a>
+            <h1 ><a class="curriculo" href="/CV.pdf">clique aqui para abrir o currículo</a>
 
             </h1>
         </div>
