--- a/index.html
+++ b/index.html
@@ -48,13 +48,19 @@
                 
                 <li>
                     <a class = "icon" href="https://github.com/geliasrd" target="_blank">
-                        <img src="images/github-brands.svg"></img>
+                        <img src="images/github.svg"></img>
                     </a>
                 </li>
     
                 <li>
                     <a  class = "icon" href="http://lattes.cnpq.br/0867504039266040" target="_blank">
                         <img src="images/lattes.png"></img>
+                    </a>
+                </li>
+
+                <li>
+                    <a  class = "icon" href="https://linkedin.com/in/geliasrd/" target="_blank">
+                        <img src="images/linkedin.svg"></img>
                     </a>
                 </li>
             </ul>   
