--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="sobre">
-            <h2 class="curso">estudante de estatística(ufrgs)</h2>
-            <h2 class="like"> apaixonado por python</h2>
+            <h2 class="curso">formando em estatística(ufrgs)</h2>
+            <h2 class="like"> apaixonado por dados</h2>
         </div>
 
         <div class="curric">
